@@ -103,6 +103,18 @@
 	[[Director sharedDirector] runScene: scene];
 }
 
+// getting a call, pause the game
+-(void) applicationWillResignActive:(UIApplication *)application
+{
+	[[Director sharedDirector] pause];
+}
+
+// call got rejected
+-(void) applicationDidBecomeActive:(UIApplication *)application
+{
+	[[Director sharedDirector] resume];
+}
+
 -(void) applicationWillTerminate: (UIApplication*) application
 {
 	NSLog(@"%d", [[Director sharedDirector] retainCount] );
