@@ -191,12 +191,25 @@ Class nextAction()
 	// before creating any layer, set the landscape mode
 	[[Director sharedDirector] setLandscape: NO];
 	[[Director sharedDirector] setDisplayFPS: YES];
-//	[[Director sharedDirector] setAnimationInterval: 1.0/60];
+	[[Director sharedDirector] setAnimationInterval: 1.0/30];
 
 	Scene *scene = [Scene node];
 	[scene add: [nextAction() node]];
 			 
 	[[Director sharedDirector] runScene: scene];
 }
+
+// getting a call, pause the game
+-(void) applicationWillResignActive:(UIApplication *)application
+{
+	[[Director sharedDirector] pause];
+}
+
+// call got rejected
+-(void) applicationDidBecomeActive:(UIApplication *)application
+{
+	[[Director sharedDirector] resume];
+}
+
 
 @end
