@@ -17,6 +17,6 @@
 {
 	cpSpace *space;
 }
--(void) step;
+-(void) step: (double) dt;
 -(void) addNewSpriteX:(float)x y:(float)y;
 @end
