@@ -126,4 +126,16 @@ id nextTransition()
 	[[Director sharedDirector] runScene: scene];
 }
 
+// getting a call, pause the game
+-(void) applicationWillResignActive:(UIApplication *)application
+{
+	[[Director sharedDirector] pause];
+}
+
+// call got rejected
+-(void) applicationDidBecomeActive:(UIApplication *)application
+{
+	[[Director sharedDirector] resume];
+}
+
 @end
